<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#F2F2F2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile Management"
            android:textSize="20sp"
            android:fontFamily="@font/prompt_regular"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/top_bar"
            app:layout_constraintBottom_toBottomOf="@id/top_bar"
            app:layout_constraintStart_toStartOf="@id/top_bar"
            app:layout_constraintEnd_toEndOf="@id/top_bar" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/back_button"
            app:layout_constraintTop_toTopOf="@id/top_bar"
            app:layout_constraintBottom_toBottomOf="@id/top_bar"
            app:layout_constraintStart_toStartOf="@id/top_bar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/top_bar_layout"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
